--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,5 @@ server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 
 # App Properties
-bezkoder.app.jwtCookieName= bezkoder
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+app.jwtSecret= bezKoderSecretKey
+app.jwtExpirationMs= 86400000
